--- a/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
+++ b/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="@dimen/padding_16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/ic_close"
+        android:background="@drawable/text_recognizer_ic_close"
         android:backgroundTint="@color/white_1"
         android:elevation="5dp"/>
 
@@ -26,7 +26,7 @@
         android:layout_width="@dimen/view_64dp"
         android:layout_height="@dimen/view_64dp"
         android:layout_marginBottom="@dimen/padding_16dp"
-        android:src="@drawable/capture_button"
+        android:src="@drawable/text_recognizer_capture_button"
         android:clickable="true"
         android:focusable="true"
         android:visibility="gone"
