--- a/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_confirmation.xml
+++ b/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_confirmation.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="@dimen/padding_16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/ic_close"
+        android:background="@drawable/text_recognizer_ic_close"
         android:backgroundTint="@color/white_1"
         android:elevation="5dp"/>
 
