--- a/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_confirmation.xml
+++ b/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_confirmation.xml
@@ -5,18 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/btn_close"
-        android:layout_width="@dimen/view_24dp"
-        android:layout_height="@dimen/view_24dp"
-        android:layout_marginStart="@dimen/padding_16dp"
-        android:layout_marginTop="@dimen/padding_16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/text_recognizer_ic_close"
-        android:backgroundTint="@color/white_1"
-        android:elevation="5dp"/>
-
-    <ImageView
         android:id="@+id/iv_photo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -31,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/white_1"
+        android:background="@color/white_1_black_3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
