--- a/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_confirmation.xml
+++ b/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_confirmation.xml
@@ -25,7 +25,7 @@
 
         <TextView
             android:id="@+id/tv_hint"
-            android:text="Данные отчетливо видны?"
+            android:text="@string/capture_confirmation_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -38,7 +38,7 @@
             android:id="@+id/btn_secondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Нет, переснять"
+            android:text="@string/no_reshoot"
             style="@style/Chili.ButtonStyle.Secondary"
             android:layout_marginHorizontal="@dimen/padding_16dp"/>
 
@@ -46,7 +46,7 @@
             android:id="@+id/btn_primary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Да, видны"
+            android:text="@string/yes_they_visible"
             style="@style/Chili.ButtonStyle.Primary"
             android:layout_margin="@dimen/padding_16dp"/>
 
