--- a/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
+++ b/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
@@ -56,4 +56,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/text_recognizer_passport_mask"
+        android:layout_marginBottom="55dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/start_offet"
+        app:layout_constraintEnd_toEndOf="@id/end_offset"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/start_offet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.15"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/end_offset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.85"/>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
