--- a/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
+++ b/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
@@ -28,6 +28,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <com.design2.chili2.view.camera_overlays.PassportCardOverlay
+            android:id="@+id/overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:overlayAlpha="102"
+            app:headerText="@string/text_recognizer_title_photo_capture"
+            app:description="@string/recognition_description"/>
+
     </FrameLayout>
 
     <ImageView
@@ -40,40 +48,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-
-    <TextView
-        android:id="@+id/tv_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/padding_24dp"
-        android:background="@drawable/chili_cell_rounded_background"
-        android:text="@string/recognition_description"
-        android:gravity="center"
-        android:padding="@dimen/padding_8dp"
-        android:visibility="gone"
-        android:layout_marginHorizontal="@dimen/padding_16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        style="@style/Chili.H7.Primary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/padding_16dp"
-        android:gravity="center"
-        android:text="@string/text_recognizer_title_photo_capture"
-        android:textColor="@color/white_1"
-        app:layout_constraintBottom_toTopOf="@id/start_offet"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/start_offet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.172" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
