--- a/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
+++ b/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
@@ -28,15 +28,47 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <com.design.chili.view.camera_overlays.PassportCardOverlay
-            android:id="@+id/overlay"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:overlayAlpha="102"
-            app:headerText="@string/text_recognizer_title_photo_capture"
-            app:description="@string/recognition_description"/>
-
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/tv_description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding_24dp"
+        android:background="@drawable/chili_card_rounded_background"
+        android:text="@string/recognition_description"
+        android:gravity="center"
+        android:padding="@dimen/padding_8dp"
+        android:visibility="gone"
+        android:layout_marginHorizontal="@dimen/padding_16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/iv_mask"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/text_recognizer_passport_mask"
+        android:layout_marginBottom="55dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/start_offet"
+        app:layout_constraintEnd_toEndOf="@id/end_offset"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/start_offet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.15"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/end_offset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.85"/>
 
     <ImageView
         android:id="@+id/btn_capture"
