--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,4 +50,12 @@
         android:layout_margin="@dimen/padding_16dp"
         style="@style/Chili.ButtonStyle.Primary"/>
 
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Open camera without mrz"
+        android:layout_marginHorizontal="@dimen/padding_16dp"
+        style="@style/Chili.ButtonStyle.Primary"/>
+
 </LinearLayout>
