--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,9 +35,9 @@
 
     <ImageView
         android:id="@+id/iv_image"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:scaleType="centerCrop"
+        android:scaleType="centerInside"
         android:text="Recognized text"
         android:textAppearance="@style/Chili.H7.Primary"
         android:layout_marginHorizontal="@dimen/padding_16dp"/>
