--- a/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
+++ b/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
@@ -7,14 +7,26 @@
 
     <ImageView
         android:id="@+id/btn_close"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="@dimen/view_24dp"
+        android:layout_height="@dimen/view_24dp"
         android:layout_marginStart="@dimen/padding_16dp"
         android:layout_marginTop="@dimen/padding_16dp"
         android:background="@drawable/chili_ic_back_arrow"
         android:backgroundTint="@color/white_1"
         android:elevation="5dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/btn_flash"
+        android:layout_width="@dimen/view_24dp"
+        android:layout_height="@dimen/view_24dp"
+        android:layout_marginTop="@dimen/padding_16dp"
+        android:layout_marginEnd="@dimen/padding_16dp"
+        android:contentDescription="@null"
+        android:elevation="5dp"
+        android:src="@drawable/ic_flash"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
@@ -97,6 +109,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
