--- a/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
+++ b/text_recognizer/src/main/res/layout/text_recognizer_fragment_photo_capture.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -34,13 +35,13 @@
         android:id="@+id/tv_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/padding_16dp"
         android:layout_marginBottom="@dimen/padding_24dp"
         android:background="@drawable/chili_cell_rounded_background"
-        android:text="@string/recognition_description"
         android:gravity="center"
         android:padding="@dimen/padding_8dp"
+        android:text="@string/recognition_description"
         android:visibility="gone"
-        android:layout_marginHorizontal="@dimen/padding_16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -49,12 +50,12 @@
         android:id="@+id/iv_mask"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/text_recognizer_passport_mask"
         android:layout_marginBottom="55dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/end_offset"
         app:layout_constraintStart_toStartOf="@id/start_offet"
-        app:layout_constraintEnd_toEndOf="@id/end_offset"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/text_recognizer_passport_mask" />
 
     <ImageView
         android:id="@+id/iv_foreigner_mask"
@@ -71,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.15"/>
+        app:layout_constraintGuide_percent="0.15" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/end_offset"
